--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
 <html lang='en-us'>
 <meta charset='UTF-8'>
-<meta http-equiv="refresh" content="0; url=https://github.com/LaurenJMKruse/Day-Planner/Develop/index.html">
+<meta http-equiv="refresh" content="0; url=https://github.com/LaurenJMKruse/Day-Planner/tree/main/Develop">
+  
