--- a/index.html
+++ b/index.html
@@ -1,38 +1,106 @@
 <!DOCTYPE html>
-<html lang='en-us'>
+<html lang="en-us">
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link
       rel="stylesheet"
       href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-    />
+    >
     <link
       rel="stylesheet"
       href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
       integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf"
       crossorigin="anonymous"
-    />
+    >
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Meddon&display=swap" rel="stylesheet">
     <<link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Eagle+Lake&display=swap" rel="stylesheet">>
-    <link rel="stylesheet" href="style.css" />
+    <link href="https://fonts.googleapis.com/css2?family=Eagle+Lake&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
     <title>Work Day Scheduler</title>
   </head>
 
   <body>
+
     <header class="jumbotron">
       <h1 class="display-3">Work Day Scheduler</h1>
       <p id="currentDay" class="lead"></p>
     </header>
+
     <div class="container">
       <!-- Timeblocks go here -->
+        <div id="08" class="row time-block">
+            <div class="col-md-2 hour">8:00 AM</div>
+            <textarea class="col-md-9 description"></textarea>
+            <button class="btn saveBtn col-md-1"><i class="fas fa-save"></i></button>
+        </div>
+
+        <div id="09" class="row time-block">
+            <div class="col-md-2 hour">9:00 AM</div>
+            <textarea class="col-md-9 description"></textarea>
+            <button class="btn saveBtn col-md-1"><i class="fas fa-save"></i></button>
+        </div>
+
+        <div id="10" class="row time-block">
+            <div class="col-md-2 hour">10:00 AM</div>
+            <textarea class="col-md-9 description"></textarea>
+            <button class="btn saveBtn col-md-1"><i class="fas fa-save"></i></button>
+        </div>
+
+        <div id="11" class="row time-block">
+            <div class="col-md-2 hour">11:00 AM</div>
+            <textarea class="col-md-9 description"></textarea>
+        <button class="btn saveBtn col-md-1"><i class="fas fa-save"></i></button>
+      </div>
+
+      <div id="12" class="row time-block">
+          <div class="col-md-2 hour">12:00 PM</div>
+          <textarea class="col-md-9 description"></textarea>
+          <button class="btn saveBtn col-md-1"><i class="fas fa-save"></i></button>
+      </div>
+
+      <div id="13" class="row time-block">
+            <div class="col-md-2 hour">1:00 PM</div>
+            <textarea class="col-md-9 description"></textarea>
+            <button class="btn saveBtn col-md-1"><i class="fas fa-save"></i></button>
+      </div>
+
+      <div id="14" class="row time-block">
+            <div class="col-md-2 hour">2:00 PM</div>
+            <textarea class="col-md-9 description"></textarea>
+            <button class="btn saveBtn col-md-1"><i class="fas fa-save"></i></button>
+      </div>
+
+      <div id="15" class="row time-block">
+          <div class="col-md-2 hour">3:00 PM</div>
+          <textarea class="col-md-9 description"></textarea>
+          <button class="btn saveBtn col-md-1"><i class="fas fa-save"></i></button>
+      </div>
+
+      <div id="16" class="row time-block">
+          <div class="col-md-2 hour">4:00 PM</div>
+          <textarea class="col-md-9 description"></textarea>
+          <button class="btn saveBtn col-md-1"><i class="fas fa-save"></i></button>
+      </div>
+
+      <div id="17" class="row time-block">
+          <div class="col-md-2 hour">5:00 PM</div>
+          <textarea class="col-md-9 description"></textarea>
+          <button class="btn saveBtn col-md-1"><i class="fas fa-save"></i></button>
+      </div>
+
+      <div id="18" class="row time-block">
+          <div class="col-md-2 hour">6:00 PM</div>
+          <textarea class="col-md-9 description"></textarea>
+          <button class="btn saveBtn col-md-1"><i class="fas fa-save"></i></button>
+      </div>
+
     </div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
-    <script src='./script.js'></script>
+    <script src='script.js'></script>
   </body>
 </html>
